Mon Jul 11 16:00:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_each, strio_readlines): convert
	  arguments just once before reading, instead of conversions for
	  each lines, as r55603.

Sun Jul 10 19:53:41 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_10.c, test/ruby/enc/test_case_comprehensive.rb:
	  Implement non-ASCII case conversion for ISO-8859-10, by Toya Hosokawa.

Sun Jul 10 19:33:47 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_comprehensive.rb: Changed testing logic in to
	  catch unintended modifications of characters that do not have a case
	  equivalent in the respective encoding.
	* enc/iso_8859_1.c, enc/iso_8859_15.c: Fixed unintended modifications of
	  micro sign and y with diaeresis.

Sun Jul 10 17:05:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_4.c, test/ruby/enc/test_case_comprehensive.rb:
	  Implement non-ASCII case conversion for ISO-8859-4, by Kotaro Yoshida.

Sun Jul 10 16:17:47 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_comprehensive.rb: Fixed a comment
	  (message belongs to last commit). [ci skip]

Sun Jul 10 14:27:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_dtoa): [EXPERIMENTAL] adjust the case that the
	  Float value is close to the exact but unrepresentable middle
	  value of two values in the given precision, as r55604.

Sun Jul 10 08:57:20 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* thread.c: Fixed implicit conversion error with Apple clang-800.0.31

Sat Jul  9 12:43:09 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/getoptlong.rb: use false instead of FALSE.

Fri Jul  8 21:49:28 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* thread.c (rb_wait_for_single_fd): Clean up fds.revents every time
	  before calling ppoll(2). [Bug #12575] [ruby-dev:49725]

Fri Jul  8 14:16:48 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_args.c (vm_caller_setup_arg_block): call rb_sym_to_proc()